force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Insured_Got_Refusal_For_Insurance_5_Year__c.field-meta.xml
<CustomField>
    <fullName>Insured_Got_Refusal_For_Insurance_5_Year__c</fullName>
    <label>Insured Got Refusal For Insurance 5 Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>