force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Insured_Had_Claims_Details__c.field-meta.xml
<CustomField>
    <fullName>Insured_Had_Claims_Details__c</fullName>
    <label>Insured Had Claims Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>