force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Insured_Had_Claims_in_The_Last_5_Years__c.field-meta.xml
<CustomField>
    <fullName>Insured_Had_Claims_in_The_Last_5_Years__c</fullName>
    <label>Insured Had Claims in The Last 5 Years</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>