force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Insured_Has_Events_To_Be_sued_for__c.field-meta.xml
<CustomField>
    <fullName>Insured_Has_Events_To_Be_sued_for__c</fullName>
    <label>Insured Has Events To Be sued for</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>