force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Interested_In_Havut__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_Havut__c</fullName>
    <label>Interested In Havut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>