force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Is_City_Designer__c.field-meta.xml
<CustomField>
    <fullName>Is_City_Designer__c</fullName>
    <label>Is City Designer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>