force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Is_Main_Designer_Extra_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Designer_Extra_Insurance__c</fullName>
    <label>Is Main Designer Extra Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>