force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Is_Registered_As_Architect_Or_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Is_Registered_As_Architect_Or_Engineer__c</fullName>
    <label>Is Registered As Architect Or Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>