force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Iso_Active_Details__c.field-meta.xml
<CustomField>
    <fullName>Iso_Active_Details__c</fullName>
    <label>Iso Active Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>