force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Iso_Approver__c.field-meta.xml
<CustomField>
    <fullName>Iso_Approver__c</fullName>
    <label>Iso Approver</label>
    <length>150</length>
    <type>Text</type>
</CustomField>