force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Iso_Type__c.field-meta.xml
<CustomField>
    <fullName>Iso_Type__c</fullName>
    <label>Iso Type</label>
    <type>TextArea</type>
</CustomField>