force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Binianim_Leshimur__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Binianim_Leshimur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Binianim Leshimur</label>
    <type>Checkbox</type>
</CustomField>