force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Construction__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Construction</label>
    <type>Checkbox</type>
</CustomField>