force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Else_Details__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Else_Details__c</fullName>
    <label>Mehandes Else Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>