force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Gas_Tivii__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Gas_Tivii__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Gas Tivii</label>
    <type>Checkbox</type>
</CustomField>