force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_GeoTechni__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_GeoTechni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes GeoTechni</label>
    <type>Checkbox</type>
</CustomField>