force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Gsharim_Veminhur__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Gsharim_Veminhur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Gsharim Veminhur</label>
    <type>Checkbox</type>
</CustomField>