force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Handasa_Geodetit__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Handasa_Geodetit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Handasa Geodetit</label>
    <type>Checkbox</type>
</CustomField>