force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Handasat_Hashmal__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Handasat_Hashmal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Handasat Hashmal</label>
    <type>Checkbox</type>
</CustomField>