force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Handasat_Maim_Sprinklers__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Handasat_Maim_Sprinklers__c</fullName>
    <label>Mehandes Handasat Maim Sprinklers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>