force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Havtahat_Echut__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Havtahat_Echut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Havtahat Echut</label>
    <type>Checkbox</type>
</CustomField>