force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Itstadions__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Itstadions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Itstadions</label>
    <type>Checkbox</type>
</CustomField>