force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Itum_From_Gazes__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Itum_From_Gazes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Itum From Gazes</label>
    <type>Checkbox</type>
</CustomField>