force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Kvishim__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Kvishim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes - Kvishim</label>
    <type>Checkbox</type>
</CustomField>