force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Maaliot__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Maaliot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Maaliot</label>
    <type>Checkbox</type>
</CustomField>