force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Maim_Details__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Maim_Details__c</fullName>
    <label>Mehandes Maim Details</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>