force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Maim_Vereashim__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Maim_Vereashim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Maim Vereashim</label>
    <type>Checkbox</type>
</CustomField>