force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Memune_Betihut__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Memune_Betihut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Memune Betihut</label>
    <type>Checkbox</type>
</CustomField>