force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Memune_Betihut_Over_20_Percent__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Memune_Betihut_Over_20_Percent__c</fullName>
    <label>Mehandes Memune Betihut Over 20 Percent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>