force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Merkazim_Refuiim__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Merkazim_Refuiim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Merkazim Refuiim</label>
    <type>Checkbox</type>
</CustomField>