force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Mesilot_Barzel__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Mesilot_Barzel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Mesilot Barzel</label>
    <type>Checkbox</type>
</CustomField>