force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Mitkanei_Maim__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Mitkanei_Maim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Mitkanei Maim</label>
    <type>Checkbox</type>
</CustomField>