force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Pikuach_Elion__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Pikuach_Elion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Pikuach Elion</label>
    <type>Checkbox</type>
</CustomField>