force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Spa__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Spa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Spa</label>
    <type>Checkbox</type>
</CustomField>