force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Taasia_Venihul__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Taasia_Venihul__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Taasia Venihul</label>
    <type>Checkbox</type>
</CustomField>