force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Taasia_Venihul_With_Projects__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Taasia_Venihul_With_Projects__c</fullName>
    <label>Mehandes Taasia Venihul With Projects</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>