force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Tama_38__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Tama_38__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Tama 38</label>
    <type>Checkbox</type>
</CustomField>