force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Tashtiot_Gas__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Tashtiot_Gas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Tashtiot Gas</label>
    <type>Checkbox</type>
</CustomField>