force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Tichnun_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Tichnun_Responsibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Tichnun Responsibility</label>
    <type>Checkbox</type>
</CustomField>