force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Yoets_Betihut_Else_Details__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Yoets_Betihut_Else_Details__c</fullName>
    <label>Mehandes Yoets Betihut Else Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>