force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Mehandes_Yoets_Negishut__c.field-meta.xml
<CustomField>
    <fullName>Mehandes_Yoets_Negishut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mehandes Yoets Negishut</label>
    <type>Checkbox</type>
</CustomField>