force-app/main/default/objects/Product_Additional_Form_Data__c/fields/None_Current_DO_Insurance__c.field-meta.xml
<CustomField>
    <fullName>None_Current_DO_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>None Current DO Insurance</label>
    <type>Checkbox</type>
</CustomField>