force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Overseas_Activitiy_Worldwide_Percent__c.field-meta.xml
<CustomField>
    <fullName>Overseas_Activitiy_Worldwide_Percent__c</fullName>
    <label>Overseas Activitiy Worldwide Percent</label>
    <length>10</length>
    <type>Text</type>
</CustomField>