force-app/main/default/objects/Product_Additional_Form_Data__c/fields/OverSeas_Activity_Details__c.field-meta.xml
<CustomField>
    <fullName>OverSeas_Activity_Details__c</fullName>
    <label>OverSeas Activity Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>