force-app/main/default/objects/Product_Additional_Form_Data__c/fields/OverSeas_Activity_Usa__c.field-meta.xml
<CustomField>
    <fullName>OverSeas_Activity_Usa__c</fullName>
    <label>OverSeas Activity Usa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>