force-app/main/default/objects/Product_Additional_Form_Data__c/fields/OverSeas_Activity_Usa_Percent__c.field-meta.xml
<CustomField>
    <fullName>OverSeas_Activity_Usa_Percent__c</fullName>
    <label>OverSeas Activity Usa Percent</label>
    <length>10</length>
    <type>Text</type>
</CustomField>