force-app/main/default/objects/Product_Additional_Form_Data__c/fields/OverSeas_Additional_Countries__c.field-meta.xml
<CustomField>
    <fullName>OverSeas_Additional_Countries__c</fullName>
    <label>OverSeas Additional Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>