force-app/main/default/objects/Product_Additional_Form_Data__c/fields/PO_Generated_PDF_final__c.field-meta.xml
<CustomField>
    <fullName>PO_Generated_PDF_final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Generated PDF final</label>
    <type>Checkbox</type>
</CustomField>