force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Previous_Insurance_Carrier1__c.field-meta.xml
<CustomField>
    <fullName>Previous_Insurance_Carrier1__c</fullName>
    <label>Previous Insurance Carrier1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>