force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Previous_Insurance_Carrier3__c.field-meta.xml
<CustomField>
    <fullName>Previous_Insurance_Carrier3__c</fullName>
    <label>Previous Insurance Carrier3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>