force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Previous_Liability2__c.field-meta.xml
<CustomField>
    <fullName>Previous_Liability2__c</fullName>
    <label>Previous Liability2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>