force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Renewal Form Data</relationshipLabel>
    <relationshipName>Product_Renewal_Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>