force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Relation_To_Professional_Co_Details__c.field-meta.xml
<CustomField>
    <fullName>Relation_To_Professional_Co_Details__c</fullName>
    <label>Relation To Professional Co. Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>