force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Relation_To_Professional_Cooporation__c.field-meta.xml
<CustomField>
    <fullName>Relation_To_Professional_Cooporation__c</fullName>
    <label>Relation To Professional Cooporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לא</fullName>
            </value>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
                <isActive>false</isActive>
                <label>אחר</label>
            </value>
            <value>
                <fullName>שפי</fullName>
                <isActive>false</isActive>
                <label>שפי</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>