force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Renewal_notice_been_sent__c.field-meta.xml
<CustomField>
    <fullName>Renewal_notice_been_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal notice been sent</label>
    <type>Checkbox</type>
</CustomField>