force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Retro_Coverage_Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Retro_Coverage_Required_Date__c</fullName>
    <label>Retro Coverage Required Date</label>
    <type>Date</type>
</CustomField>