force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Retroactive_Coverage_Required__c.field-meta.xml
<CustomField>
    <fullName>Retroactive_Coverage_Required__c</fullName>
    <label>Retroactive Coverage Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>כן</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>