force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Selected_currency__c.field-meta.xml
<CustomField>
    <fullName>Selected_currency__c</fullName>
    <label>Selected currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NIS</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>