force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_Date__c</fullName>
    <label>Sign Date</label>
    <type>Date</type>
</CustomField>