force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Signature_Content_Version_from_Guest__c.field-meta.xml
<CustomField>
    <fullName>Signature_Content_Version_from_Guest__c</fullName>
    <label>Signature Content Version from Guest</label>
    <length>20</length>
    <type>Text</type>
</CustomField>