force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Signed_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Name__c</fullName>
    <label>Signed By Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>