force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Signed_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Role__c</fullName>
    <label>Signed By Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>