force-app/main/default/objects/Product_Additional_Form_Data__c/fields/Source_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Product_Id__c</fullName>
    <label>Source Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>